# ifj19

./: CMakeLists.txt  Implementácia prekladača imperatí.pptx  Makefile  README.md  analyza.c  analyza.h  code_generator.c  code_generator.h  error.c  error.h  expression.c  expression.h  expression_stack.c  expression_stack.h  lexem_string.c  lexem_string.h  main.c  parser.c  parser.h  parser.h~HEAD  prezentácia.txt  reader.c  reader.h  rozdeleni  scanner.c  scanner.h  stack.c  stack.h  stack_indent_dedent.c  stack_indent_dedent.h  symtable.c  symtable.h  test.c  test.sh  test1.txt  test2.txt  test5.txt  token.c
doc/: Makefile  dokumentace.aux  dokumentace.tex  dokumentace.toc  dokumentacia.aux  dokumentacia.out  dokumentacia.tex  dokumentacia.toc
tests/: function_and_multi_var.txt  multi_var.txt  test.txt  test1.txt  test10.txt  test11.txt  test12.txt  test13.txt  test19.txt  test1aaa.txt  test1bbb.txt  test1jjjj.txt  test1nnn.txt  test2.txt  test2bbb.txt  test2jjjj.txt  test2nnn.txt  test3bbb.txt  test3jjjj.txt  test4.txt  test4aaa.txt  test4bbb.txt  test4jjjj.txt  test5.txt  test5bbb.txt  test9.txt  testnnn.txt
